# coredrift

./: .gitignore  DESIGN.md  README.md  UPSTREAM.md  pyproject.toml
scripts/: e2e_smoke.sh  repro_unknown_fields_drop.sh
tests/: test_contracts.py  test_globmatch.py
wg_drift/: __main__.py  cli.py  contracts.py  drift.py  events.py  git_tools.py  globmatch.py  install.py  state.py  workgraph.py
