[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speedrift"
version = "0.1.0"
description = "Workgraph sidecar to reduce agent/task drift (contracts + drift reports)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
speedrift = "wg_drift.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wg_drift*"]
